# testing

./: BUILD.bazel  MODULE.bazel  bazel-bin  bazel-out  bazel-testing  bazel-testlogs  main.go
internal/: BUILD.bazel  lib.go
