load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

# gazelle:prefix github.com/terjelafton/testing
gazelle(name = "gazelle")

go_library(
    name = "testing_lib",
    srcs = ["main.go"],
    importpath = "github.com/terjelafton/testing",
    visibility = ["//visibility:private"],
    deps = [
        "//internal",
        "@org_golang_x_example_hello//reverse",
    ],
)

go_binary(
    name = "testing",
    embed = [":testing_lib"],
    visibility = ["//visibility:public"],
)

pkg_tar(
    name = "testing_layer",
    srcs = [":testing"],
)

oci_image(
    name = "image",
    base = "@distroless_base",
    entrypoint = ["/testing"],
    tars = [":testing_layer"],
)

oci_push(
    name = "push",
    image = ":image",
    remote_tags = ["latest"],
    repository = "ghcr.io/terjelafton/testing",
)

oci_tarball(
    name = "tarball",
    image = ":image",
    repo_tags = ["testing:latest"],
)
